# code20automatasearch

./: .gitignore  Cargo.toml  example.txt  manuallycurated.txt  novel_results.txt  output-server4.txt  output.txt  record.txt  results.txt  shell.nix  total-file-output-manual.txt  total-file-output.txt
filesolver/: cnf_for_w100_p1.cnf  cnf_for_w100_p10.cnf  cnf_for_w100_p10_output.txt  cnf_for_w100_p13.cnf  cnf_for_w100_p13_output.txt  cnf_for_w100_p16.cnf  cnf_for_w100_p16_output.txt  cnf_for_w100_p19.cnf  cnf_for_w100_p19_output.txt  cnf_for_w100_p1_output.txt  cnf_for_w100_p2.cnf  cnf_for_w100_p22.cnf  cnf_for_w100_p22_output.txt  cnf_for_w100_p25.cnf  cnf_for_w100_p25_output.txt  cnf_for_w100_p26.cnf  cnf_for_w100_p28.cnf  cnf_for_w100_p29.cnf  cnf_for_w100_p2_output.txt  cnf_for_w100_p3.cnf  cnf_for_w100_p31.cnf  cnf_for_w100_p31_output.txt  cnf_for_w100_p37.cnf  cnf_for_w100_p37_output.txt  cnf_for_w100_p3_output.txt  cnf_for_w100_p4.cnf  cnf_for_w100_p40_output.txt  cnf_for_w100_p43_output.txt  cnf_for_w100_p4_output.txt  cnf_for_w100_p5.cnf  cnf_for_w100_p50_output.txt  cnf_for_w100_p53_output.txt  cnf_for_w100_p56_output.txt  cnf_for_w100_p5_output.txt  cnf_for_w100_p6.cnf  cnf_for_w100_p62_output.txt  cnf_for_w100_p68_output.txt  cnf_for_w100_p6_output.txt  cnf_for_w100_p7.cnf  cnf_for_w100_p75_output.txt  (+29 more)
outputs/: output-server4.txt
src/: bruteforce.rs  customuint.rs  filesatsolver.rs  highestsearched.txt  main.rs  satcreator.rs  satsolver.rs  splrsatsolver.rs  temp.txt
symbolic/: gameoflife2.nb  nope doesnt work.nb  output 1hr.txt  output.txt
(+6 files in other folders)
