[package]
name = "code20search"
version = "0.1.0"
edition = "2021"

[dependencies]
cgrustplot = "1.1.0"
rayon = "1.10.0"
splr = "0.17.2"
uint = "0.10.0"

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
panic = "abort"
debug = false
incremental = true
codegen-units = 16
